# Dark-Phoenix

./: Cargo.toml  LICENSE  README.md
ai-engine/: requirements.txt  ultra_seeker.py  ultra_seeker_demo.py
anti-hacking/: Cargo.toml
anti-hacking/src/: lib.rs
api-server/: package.json  server.js
cloud-api/: package.json  server.js
cloud-api/services/: EmergencyService.js
dark-phoenix-core/: Cargo.toml
dark-phoenix-core/src/: lib.rs  main.rs
deterrence-suite/: Cargo.toml
deterrence-suite/src/: lib.rs
fire-suppression/: Cargo.toml
fire-suppression/src/: lib.rs
flight-control/: Cargo.toml
flight-control-cpp/: CMakeLists.txt  dark_phoenix_flight.cpp
flight-control-cpp/include/: common_types.hpp  flight_controller.hpp  mission_planner.hpp  navigation_system.hpp  safety_monitor.hpp
flight-control-cpp/src/: flight_systems.cpp  main.cpp
flight-control/src/: lib.rs
medical-response/: Cargo.toml
medical-response/src/: lib.rs
police-contact/: Cargo.toml
police-contact/src/: lib.rs
shield-system/: Cargo.toml
shield-system/src/: lib.rs
symbolic-intelligence/: Cargo.toml
symbolic-intelligence/src/: lib.rs
threat-detection/: Cargo.toml
threat-detection/src/: lib.rs
