[package]
name = "anti-hacking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Advanced cybersecurity and anti-exploit systems"

[dependencies]
tokio.workspace = true
serde.workspace = true
dark-phoenix-core = { path = "../dark-phoenix-core" }
