[package]
name = "flight-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Flight control and navigation systems"

[dependencies]
tokio.workspace = true
serde.workspace = true
dark-phoenix-core = { path = "../dark-phoenix-core" }
