[package]
name = "police-contact"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Emergency services integration with GPS and encrypted communication"

[dependencies]
tokio.workspace = true
serde.workspace = true
dark-phoenix-core = { path = "../dark-phoenix-core" }
