[package]
name = "shield-system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ballistic shield deployment and control system"

[dependencies]
tokio.workspace = true
serde.workspace = true
dark-phoenix-core = { path = "../dark-phoenix-core" }
