[package]
name = "threat-detection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ultra Seeker powered threat detection and assessment engine"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true

# AI/ML libraries for threat assessment
# candle-core = "0.3"  # Commented out for now
# candle-nn = "0.3"    # Commented out for now
image = "0.24"
# opencv = { version = "0.88", optional = true }

# Dark Phoenix core types
dark-phoenix-core = { path = "../dark-phoenix-core" }

[features]
default = []
# opencv = ["dep:opencv"]
